force-app/main/default/objects/Vote__c/fields/Bill__c.field-meta.xml
<CustomField>
    <fullName>Bill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill</label>
    <referenceTo>Bill__c</referenceTo>
    <relationshipLabel>Vote</relationshipLabel>
    <relationshipName>Vote</relationshipName>
    <type>Lookup</type>
</CustomField>