force-app/main/default/objects/Vote__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Vote__c</referenceTo>
    <relationshipLabel>Vote</relationshipLabel>
    <relationshipName>Vote</relationshipName>
    <type>Lookup</type>
</CustomField>