force-app/main/default/objects/Vote__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <formula>TEXT(Teachta_Dala__r.Party__c)</formula>
    <label>Party</label>
    <type>Text</type>
</CustomField>