force-app/main/default/objects/Vote__c/fields/TD__c.field-meta.xml
<CustomField>
    <fullName>TD__c</fullName>
    <label>TD</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>