force-app/main/default/objects/Vote__c/fields/Teachta_Dala__c.field-meta.xml
<CustomField>
    <fullName>Teachta_Dala__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teachta Dala</label>
    <referenceTo>TD__c</referenceTo>
    <relationshipLabel>Vote</relationshipLabel>
    <relationshipName>Vote</relationshipName>
    <type>Lookup</type>
</CustomField>