force-app/main/default/objects/Vote__c/fields/Vote_Details__c.field-meta.xml
<CustomField>
    <fullName>Vote_Details__c</fullName>
    <label>Vote Details</label>
    <required>true</required>
    <type>Url</type>
</CustomField>