force-app/main/default/objects/Vote__c/fields/Vote_Summary__c.field-meta.xml
<CustomField>
    <fullName>Vote_Summary__c</fullName>
    <label>Vote Summary</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>