force-app/main/default/objects/Vote__c/fields/Yes__c.field-meta.xml
<CustomField>
    <fullName>Yes__c</fullName>
    <label>Yes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>