force-app/main/default/objects/Vote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Yes__c</columns>
    <columns>No__c</columns>
    <columns>TD__c</columns>
    <columns>Vote_Details__c</columns>
    <columns>Vote_Summary__c</columns>
    <columns>Bill__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>